fix: restore file contents from git-lfs
Former-commit-id: b23ae8a13217759ae78b630626cfd8006ce1a112

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -1,3 +1,18 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:3ff607314c24baf5311224ad3fd9ccdba7bbc67a3ca91c709e227e1e6a402f08
-size 480
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Glasgow's Litter</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta
+      name="description"
+      content="A visualisation of Glasgow City's litter problem."
+    />
+    <link rel="icon" href="favicon.ico" />
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <main id="app"></main>
+    <script src="index.js"></script>
+  </body>
+</html>
